fix(ServiceNetworkingConfigSection): remove text truncation
Removes truncation and wraps content for "Load Balanced Address"
column under the Networking section on the review service screen.

Closes DCOS-40685

--- a/src/styles/content/tables/styles.less
+++ b/src/styles/content/tables/styles.less
@@ -111,6 +111,10 @@
       }
     }
 
+    td.wrap-content {
+      white-space: normal;
+    }
+
     th,
     td {
       // This property is necessary for table cells to respect the text-overflow
